@@ -151,7 +151,18 @@ class Sessions(sessions_rdbms.Sessions):
                 self.db.rollback()
 
 class Database(rdbms_common.Database):
+    """Postgres DB backend implementation
+
+    attributes:
+      dbtype:
+        holds the value for the type of db. It is used by indexer to
+        identify the database type so it can import the correct indexer
+        module when using native text search mode.
+    """
+
     arg = '%s'
+
+    dbtype = "postgres"
 
     # used by some code to switch styles of query
     implements_intersect = 1
